// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component as disabled 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={true}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component with a help text 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
  <div
    className="SelectField__hints"
  >
    <HelpText
      extraClassNames="SelectField__help-text"
      testId="cf-ui-help-text"
    >
      please select an option
    </HelpText>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={true}
    id="optionSelect"
    isDisabled={false}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
  <ValidationMessage
    extraClassNames="SelectField__validation-message"
    testId="cf-ui-validation-message"
  >
    not valid
  </ValidationMessage>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      required={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    testId="cf-ui-select"
    value="optionOne"
    width="full"
  >
    <Option
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;
